[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
buddy_system_allocator = "0.6" # 动态内存分配器的实现
sbi-rt = {version="0.0.2",features = ["legacy"]}
# legacy：说明是遗留窗口
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = {path = "../riscv",features = ["inline-asm"]}
bitflags = "1.2.1"
[profile.release]
debug = true


# [dependencies]
# riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
# lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# log = "0.4"
# sbi-rt = { version = "0.0.2", features = ["legacy"] }

# [profile.release]
# debug = true